cmd/envoy-core/ingress.yaml



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testupstream-mcpbridge
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
    - host: httpbin-mcpbridge.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
